test/compilable/testlibmain.d
// REQUIRED_ARGS: -lib
// PERMUTE_ARGS:

void main() {}
