test/fail_compilation/fail114.d
// 371

void funcA( typeof(&funcB) p) { }

void funcB( typeof(&funcA) p) { }
